<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Tempo</string>
    <string name="refresh">Recarregar</string>
    <string name="carregando">Carregando...</string>
    <string name="action_settings">Configurar</string>
    <string name="action_map">Local</string>

    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->
    <string name="pref_localizacao">Localizacação (CEP)</string>
    <string name="pref_localizacao_default" translatable="false">34505000</string>
    <string name="pref_metric_summary">Selecione o sistema de métrica desejado</string>
    <string name="pref_metric">Métrica</string>
    <string name="pref_cep_summary">Defina o CEP da localização desejada</string>
    <string name="pref_num_days">Dias</string>
    <string name="pref_num_days_summary">Número de dias a ser exibido</string>
    <string-array name="pref_metric_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_metric_labels">
        <item>Métrica (ºC)</item>
        <item>Imperial (ºF)</item>
    </string-array>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
</resources>
