<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_localizacao"
        android:defaultValue="@string/pref_localizacao_default"
        android:inputType="textCapWords"
        android:key="cep"
        android:summary="@string/pref_cep_summary"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />
    <ListPreference
        android:key="metric"
        android:title="@string/pref_metric"
        android:summary="@string/pref_metric_summary"
        android:entries="@array/pref_metric_labels"
        android:entryValues="@array/pref_metric_values"
        android:defaultValue="metric"/>
    <EditTextPreference
        android:defaultValue="7"
        android:inputType="number"
        android:key="days"
        android:summary="@string/pref_num_days_summary"
        android:title="@string/pref_num_days" />
</PreferenceScreen>
